...
              {!isLocalOnly ? (
                <>
                  <Spacer flexible />
                  <Row spacing={25} alignment="center">
                    <PostFeedIconButton
                      icon={isPinned ? "pin.fill" : "pin"}
                      accessibilityLabel={isPinned ? "Unpin" : "Pin"}
                      disabled={actionsDisabled}
                      onPress={onTogglePin}
                    />
                    <PostFeedIconButton
                      icon={isLiked ? "heart.fill" : "heart"}
                      accessibilityLabel={isLiked ? "Unlike" : "Like"}
...
